# init-system

./: Cargo.toml  README.md  x86_64-serene.json
.cargo/: config.toml
src/: elf_loader.rs  main.rs  tar.rs
