[package]
name = "init_system"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
serenelib = { git = "https://github.com/serenekernel/serenelib.git" }

[profile.dev]
panic = "abort"
codegen-units = 1
lto = false
incremental = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
strip = false

[[bin]]
name = "init_system"
test = false
bench = false
